tests/should_fail/circular_import.luma
-- Test that circular imports are detected and rejected
import("./helpers/circular_a_helper.module")
